--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name":"EEE 35",
-    "short_name":"EEE 35",
+    "name":"Economics 27",
+    "short_name":"Economics 27",
     "start_url":"index.html",
     "display":"standalone",
     "background_color":"#FFF",
